--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,84 @@ triton==2.2.0
 typing_extensions==4.11.0
 pip==24.0
 setuptools==59.6.0
+cffi==1.16.0
+defusedxml==0.7.1
+ipython==8.23.0
+beautifulsoup4==4.12.3
+soupsieve==2.5
+opencv-python==4.9.0.80
+h11==0.14.0
+attrs==23.2.0
+tornado==6.4
+pyzmq==26.0.2
+pexpect==4.9.0
+comm==0.2.2
+traitlets==5.14.3
+fqdn==1.5.1
+parso==0.8.4
+jedi==0.19.1
+pytz==2024.1
+PyYAML==6.0.1
+exceptiongroup==1.2.1
+sniffio==1.3.1
+arrow==1.3.0
+python-dateutil==2.9.0.post0
+Babel==2.14.0
+httpcore==1.0.5
+Pygments==2.17.2
+idna==3.7
+certifi==2024.2.2
+overrides==7.7.0
+decorator==5.1.1
+matplotlib==3.8.4
+psutil==5.9.8
+packaging==24.0
+urllib3==2.2.1
+six==1.16.0
+webencodings==0.5.1
+bleach==6.1.0
+tinycss2==1.2.1
+requests==2.31.0
+pandas==2.2.2
+pygame==2.5.2
+jupyter_client==8.6.1
+wcwidth==0.2.13
+debugpy==1.8.1
+ptyprocess==0.7.0
+anyio==4.3.0
+nbformat==5.10.4
+jupyter_core==5.7.2
+nbclient==0.10.0
+fastjsonschema==2.19.1
+jsonschema==4.21.1
+asttokens==2.4.1
+contourpy==1.2.1
+executing==2.0.1
+fonttools==4.51.0
+gymnasium==0.29.1
+ipykernel==6.29.4
+nbconvert==7.16.3
+pandocfilters==1.5.1
+mistune==3.0.2
+jupyterlab_pygments==0.3.0
+pycparser==2.22
+pyparsing==3.1.2
+websocket-client==1.7.0
+terminado==0.18.1
+referencing==0.34.0
+webcolors==1.13
+jsonpointer==2.4
+isoduration==20.11.0
+jupyterlab==4.1.6
+jupyterlab_server==2.26.0
+jupyter_server==2.14.0
+notebook_shim==0.2.4
+httpx==0.27.0
+cycler==0.12.1
+kiwisolver==1.4.5
+Send2Trash==1.8.3
+cloudpickle==3.0.0
+platformdirs==4.2.0
+prometheus_client==0.20.0
+jupyter_server_terminals==0.5.3
+json5==0.9.25
